# oc6-linkedin-lead-scoring

./: .coveragerc  .dockerignore  .env.example  .gitignore  BLUEPRINT_OC8_FINALIZATION.md  BRANCHING_STRATEGY.md  CLAUDE.md  Dockerfile  Dockerfile.streamlit  KNOWN_ISSUES.md  LICENSE  README.md  SESSION_B_TASKS.md  SESSION_COORDINATION.md  SETUP_ENVIRONMENT.md  VERSION_HISTORY.md  environment.yml  pyproject.toml  requirements-prod.txt  requirements-streamlit.txt  setup_env.sh  streamlit_app.py
.claude/: settings.json
.github/workflows/: ci.yml  claude-code-review.yml  dashboard.yml  production.yml  security.yml  staging.yml
.old/: BLUEPRINT_OC8_FINALIZATION.md  DRIFT_DEMONSTRATION_PLAN.md  REVIEW_FIX_PLAN.md  REVIEW_REPORT_SESSION_A.md  REVIEW_REPORT_SESSION_B.md  REVIEW_REPORT_SESSION_C.md  SESSION_A_TASKS.md  SESSION_C_TASKS.md  STAGING_PLAN.md  STAGING_TASKS.md
alembic/: env.py
alembic/versions/: 13392d3abd1b_create_prediction_logs_and_api_metrics_.py
data/: README.md
data/backups/: linkedin_leads_llm_enriched_BACKUP_20251224_084909.csv
data/drift_scenarios/: drift_geography_shift.csv  drift_quality_degradation.csv  drift_sector_shift.csv  drift_seniority_shift.csv  no_drift_baseline.csv
data/processed/: linkedin_leads_clean.csv  linkedin_leads_merged.csv
data/production/: new_contacts_enriched.csv  new_contacts_processed.csv  unlabelled_contacts_enriched.csv
data/reference/: training_reference.csv
data/reference_v2/: training_reference.csv
docs/: ARCHITECTURE_DECISIONS.md  DATA_DRIFT_GUIDE.md  LLM_ENRICHMENT_GUIDE.md  MONITORING_GUIDE.md  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.md  TOP_K_PRECISION_PRODUCTION_GUIDE.md
hooks/: pre-push
model/: README.md  feature_columns.json  numeric_medians.json  preprocessor.joblib  xgboost_model.joblib
model_v2/: feature_columns.json  numeric_medians.json  preprocessor.joblib  xgboost_model.joblib
notebooks/: 01_linkedin_data_prep.ipynb  02_linkedin_model_training.ipynb  03_performance_analysis.ipynb  04_drift_monitoring_analysis.ipynb
reports/: cprofile_onnx_stats.txt  cprofile_stats.txt  onnx_benchmark.json  profile_results.json
scripts/: export_model.py  generate_drift_scenarios.py  optimize_model.py  prepare_new_contacts.py  profile_api.py  retrain_model.py  setup_hooks.sh  validate_pipeline.py
src/linkedin_lead_scoring/: __init__.py  features.py
src/linkedin_lead_scoring/api/: __init__.py  main.py  middleware.py  predict.py  schemas.py
src/linkedin_lead_scoring/data/: __init__.py  llm_enrichment.py  utils_data.py
src/linkedin_lead_scoring/db/: __init__.py  connection.py  models.py  repository.py
src/linkedin_lead_scoring/monitoring/: __init__.py  dashboard_utils.py  drift.py  onnx_optimizer.py  profiler.py
src/linkedin_lead_scoring/utils/: __init__.py
tests/: conftest.py  test_api_integration.py  test_ci_workflows.py  test_db.py  test_dockerfile.py  test_docs.py  test_drift.py  test_e2e.py  test_export_model.py  test_features.py  test_middleware.py  test_monitoring.py  test_onnx_optimizer.py  test_predict.py  test_profiler.py  test_schemas.py  test_smoke.py  test_validate_pipeline.py
tests/e2e/: conftest.py  test_e2e.py
