[project]
name = "oc6-linkedin-lead-scoring"
version = "0.1.0"
description = "MLOps project: LinkedIn lead scoring with FastAPI and MLflow"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Ghislain Delabie", email = "ghislain@delabie.tech" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "mlflow>=2.18.0",
  "xgboost>=3.0.5",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "imbalanced-learn>=0.11",
  "shap>=0.46",
  "optuna>=4.0",
  "python-dotenv>=1.0",
  "httpx>=0.27.0",  # For LemList API
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_lead_scoring"]
artifacts = ["src/linkedin_lead_scoring/api/static/*"]

[tool.hatch.build.targets.sdist]
include = ["src/linkedin_lead_scoring", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
    "slow: slow running tests",
]
asyncio_mode = "auto"
