[project]
name = "oc6-linkedin-lead-scoring"
version = "0.1.0"
description = "MLOps project: LinkedIn lead scoring with FastAPI and MLflow"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Ghislain Delabie", email = "ghislain@delabie.tech" }]

dependencies = [
  # Note: numpy, pandas, scikit-learn, imbalanced-learn are installed via conda
  # (see environment.yml) for better binary compatibility
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "mlflow>=2.18.0",
  "xgboost>=3.0.5",
  "shap>=0.46",
  "optuna>=4.0",
  "optuna-integration[mlflow]>=4.0",  # For MLflowCallback
  "python-dotenv>=1.0",
  "httpx>=0.27.0",  # For LemList API
  "openai>=1.12.0",  # For LLM-based feature enrichment
  "tiktoken>=0.5.0",  # Token counting for cost estimation
  "joblib>=1.3.0",  # Model serialization
  "category-encoders>=2.6.0",  # Target encoding for categorical features
  "sqlalchemy>=2.0",  # Async ORM
  "aiosqlite>=0.19.0",  # Async SQLite driver (local dev + tests)
  "asyncpg>=0.29.0",  # Async PostgreSQL driver (production)
  "alembic>=1.13.0",  # Database migrations
  "greenlet>=3.0",  # Required by SQLAlchemy async
]

[dependency-groups]
dev = [
    # Note: jupyterlab, ipykernel are installed via conda (see environment.yml)
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_lead_scoring"]
artifacts = ["src/linkedin_lead_scoring/api/static/*"]

[tool.hatch.build.targets.sdist]
include = ["src/linkedin_lead_scoring", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
    "slow: slow running tests",
]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "ignore:numpy.core is deprecated:DeprecationWarning:evidently",
    "ignore:invalid value encountered in divide:RuntimeWarning:numpy",
    "ignore:divide by zero encountered in divide:RuntimeWarning:scipy",
]
